--- a/templates/messages.html
+++ b/templates/messages.html
@@ -185,13 +185,8 @@
             }
         });
 
-        // Placeholder functions
-        function shareAnalysisModal() {
-            console.log('📤 Partage d\'analyse');
-            showNotification('Fonctionnalité de partage en cours de développement', 'info');
-        }
-
         // attachFile() est maintenant définie dans messages_modern.js
+        // shareAnalysisModal() est maintenant définie dans messages_modern.js
     </script>
 
     <!-- Overlay pour fermer la sidebar sur mobile -->
